Generics_Super_Extend_WildCard/Code5_error_report.txt
javac errors for Code5.java 
Code5.java:17: error: method bar in class Code5 cannot be applied to given types;
        List<Integer> i = bar(m, l);
                          ^
  required: Map<T,T>,List<? extends T>
  found: Map<Boolean,String>,List<CAP#1>
  reason: inference variable T has incompatible bounds
    equality constraints: String,Boolean
    upper bounds: Number
  where T is a type-variable:
    T extends Number declared in method <T>bar(Map<T,T>,List<? extends T>)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: Number from capture of ? super Number
1 error
 
============================================================================= 
ExtendJ errors for Code5.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code5.java:17: error: no method named bar(java.util.Map<java.lang.Boolean, java.lang.String>, java.util.List<? super Number>) in Generics_Super_Extend_WildCard.Code5 matches. However, there is a method bar(java.util.Map<T, T>, java.util.List<? extends T>)
 
============================================================================= 
Eclipse ECJ errors for Code5.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code5.java (at line 17)
	List<Integer> i = bar(m, l);
	                  ^^^
The method bar(Map<T,T>, List<? extends T>) in the type Code5 is not applicable for the arguments (Map<Boolean,String>, List<capture#1-of ? super Number>)
----------
1 problem (1 error)
